# ftm-columnstore

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build-docker.yml  python.yml  release.yml
ftm_columnstore/: __init__.py  cli.py  dataset.py  driver.py  engine.py  enums.py  exceptions.py  io.py  nk.py  phonetic.py  predict.py  query.py  reconcile.py  search.py  settings.py  statements.py  store.py  util.py  xref.py
tests/: conftest.py  test_canonical.py  test_cli.py  test_dataset.py  test_fingerprints.py  test_io.py  test_query.py  test_reconcile.py  test_search.py  test_store.py  test_xref.py  util.py
tests/fixtures/: donations.ijson  icij_luanda_leaks.jsonl
