[metadata]
name = ftm-columnstore
version = file: VERSION
description = Column store implementation for ftm data based on clickhouse
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Simon Wörpel
author_email = simon.woerpel@medienrevolte.de
url = https://github.com/simonwoerpel/ftm-columnstore
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires:
    banal
    Click
    clickhouse-driver[numpy]
    followthemoney
    libindic-soundex
    libindic-utils
    metaphone
    nomenklatura
    numpy<1.24
    orjson
    pandas
    pyicu
    structlog

[options.extras_require]
predict =
    followthemoney_typepredict @ git+https://github.com/alephdata/followthemoney-typepredict.git
api =
    yente @ git+https://github.com/opensanctions/yente.git
    aiocron
    asyncstdlib
    aiofiles
    aiohttp
    python-multipart
    elasticsearch
    fastapi
    ftm-geocode
    uvicorn

[options.package_data]
ftm_columnstore = py.typed

[options.entry_points]
console_scripts =
    ftmcs = ftm_columnstore.cli:cli

[flake8]
max-line-length = 88
select = C,E,F,W,B,B950
extend-ignore = E203, E501
